[package]
name = "robustloader"
version = "0.1.0"
authors = ["talbor49 <talbor49@gmail.com>", "DanielEliad <daniel.eliad32@gmail.com>", "RoyShulman <roy.shulman@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.font8x8]
version = "0.2.4"
default-features = false
features = ["unicode"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
